# NerDisco

./: .gitignore  .gitmodules  AudioConversion.h  AudioInterface.cpp  AudioInterface.h  AudioProcessing.cpp  AudioProcessing.h  AudioThread.cpp  AudioThread.h  CMakeLists.txt  CodeEdit.cpp  CodeEdit.h  ColorOperations.cpp  ColorOperations.h  Deck.cpp  Deck.h  Deck.ui  DisplayImageConverter.cpp  DisplayImageConverter.h  DisplayThread.cpp  DisplayThread.h  ImageOperations.h  LiveView.cpp  LiveView.h  MIDIControlConnection.cpp  MIDIControlConnection.h  MIDIControlMapper.cpp  MIDIControlMapper.h  MIDIControlMapping.cpp  MIDIControlMapping.h  MIDIDeviceInterface.cpp  MIDIDeviceInterface.h  MIDIInterface.cpp  MIDIInterface.h  MIDIParameterConnection.cpp  MIDIParameterMapping.cpp  MIDIWorker.cpp  MIDIWorker.h  MainWindow.cpp  MainWindow.h  (+46 more)
LEDStream_WS2801/: LEDStream_WS2801.ino
LEDStream_WS2812B/: LEDStream_WS2812B.ino
effects/: 3rects.qml  circles.fs  default.fs  default.qml  heart.qml  pixels.qml  plasma.fs  plasma_blink.qml  plasma_hsv.fs  rect.fs  rect.qml  scroller.qml  stripes.fs  swipe.qml  swipe_2.qml  test.qml
resources/: resources.qrc
src/: AudioConversion.cpp  AudioInterface.cpp  AudioInterface.h  AudioProcessing.cpp  AudioProcessing.h  CodeEdit.cpp  ColorOperations.h  Deck.cpp  Deck.h  Deck.ui  DisplayImageConverter.cpp  DisplayImageConverter.h  DisplayThread.cpp  GLSLCompileThread.cpp  GLSLCompileThread.h  I_MIDIControl.h  ImageOperations.cpp  LiveView.cpp  LiveView.h  MIDIDeviceInterface.cpp  MIDIDeviceInterface.h  MIDIInterface.cpp  MIDIInterface.h  MIDIParameterConnection.cpp  MIDIParameterConnection.h  MIDIParameterMapping.cpp  MIDIParameterMapping.h  MIDIWorker.cpp  MIDIWorker.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  NerDisco.cpp  NodeBase.cpp  NodeBase.h  NodeEnum.cpp  NodeEnum.h  NodeQString.cpp  NodeQString.h  NodeRanged.cpp  (+17 more)
